[package]
name = "shack"
version = "0.1.1"
authors = ["saresend <saresend@usc.edu>"]

description = """A dead simple CLI for remembering simple stuff thats hard to remember.
"""
documentation = "https://github.com/BurntSushi/ripgrep"
homepage = "https://github.com/saresend/shack"
repository = "https://github.com/saresend/shack"
readme = "README.md"
license = "Unlicense/MIT"

[dependencies]
clap = "2.31.2"
serde = "1.0.38"
serde_derive = "1.0.38"
serde_json = "1.0.16"
app_dirs = "1.2.1"

